# smart_mirror

./: CMakeLists.txt
assets/fmi/: files.txt
conf/: msg_widget.conf  smart_mirror.conf
scripts/: rebuild.ps1
src/: CMakeLists.txt  msg_widget.c  msg_widget.h  render_instr.c  render_instr.h  smart_mirror.c  smart_mirror_conf.c  smart_mirror_conf.h  time_widget.c  time_widget.h  weather_widget.c  weather_widget.h
src/conf/: smart_mirror.conf
